--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -10,8 +10,35 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:foreground="?attr/selectableItemBackground"
+            android:paddingHorizontal="@dimen/share_tv_text_size18"
+            android:src="@drawable/outline_arrow_back_ios_new_24" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center_vertical"
+            android:text="@string/classic_4x4_small"
+            android:textColor="@color/black"
+            android:textSize="@dimen/dialog_desc_text_size_22"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dialog_button_margin_20"
+        android:layout_marginHorizontal="@dimen/dialog_button_margin_20"
+        android:layout_marginBottom="@dimen/dialog_button_margin_20"
         android:orientation="horizontal">
 
         <TextView
@@ -145,7 +172,7 @@
 
         <ImageView
             android:id="@+id/hammer_game"
-            android:layout_width="55dp"
+            android:layout_width="@dimen/hammer_icon_55"
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="@dimen/dialog_button_margin_20"
