--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -35,7 +35,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/view_height_1"
         android:background="@color/black" />
 
     <TextView
@@ -46,36 +46,36 @@
         android:layout_marginHorizontal="@dimen/game_board_margin_16"
         android:layout_marginTop="@dimen/game_board_margin_16"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="@dimen/dialog_desc_text_size_22"
         android:textStyle="bold" />
 
     <FrameLayout
         android:id="@+id/theme_name_fl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dialog_margin_10"
         android:foreground="?attr/selectableItemBackground"
         android:layout_marginHorizontal="@dimen/game_board_margin_16"
         android:background="@drawable/item_glass_effect"
         android:orientation="horizontal"
-        android:padding="4dp">
+        android:padding="@dimen/text_desc_padding_4">
 
         <TextView
             android:id="@+id/theme_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="@dimen/dialog_title_text_size_30"
             android:fontFamily="sans-serif-medium"
-            android:padding="8dp"
+            android:padding="@dimen/text_desc_title_8"
             tools:text="Pink monochrome"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="@dimen/share_tv_text_size18" />
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="@dimen/theme_item_name_24sp"
+            android:layout_height="@dimen/theme_item_name_24sp"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="@dimen/text_desc_padding_4"
             android:contentDescription="@null"
             app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
             app:tint="@color/black" />
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginHorizontal="@dimen/game_board_margin_16"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/dialog_button_margin_20"
         android:background="@color/black" />
 
     <TextView
@@ -96,14 +96,56 @@
         android:fontFamily="sans-serif-smallcaps"
         android:text="@string/app_info"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="@dimen/dialog_desc_text_size_22"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/settings_ll_guide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dialog_margin_10"
+        android:layout_marginHorizontal="@dimen/game_board_margin_16"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="@dimen/dialog_margin_10">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:src="@drawable/outline_menu_book_24"
+            app:tint="@color/black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/game_board_margin_16">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="@string/how_to_play"
+                android:textColor="@color/black"
+                android:textSize="@dimen/share_tv_text_size18" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/read_guide"
+                android:textColor="@color/black"
+                android:textSize="@dimen/high_score_14sp" />
+
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/settings_ll_share_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dialog_margin_10"
         android:layout_marginHorizontal="@dimen/game_board_margin_16"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
@@ -146,7 +188,7 @@
         android:id="@+id/settings_ll_rate_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dialog_margin_10"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
         android:padding="@dimen/dialog_margin_10">
@@ -188,7 +230,7 @@
         android:id="@+id/settings_ll_privacy_policy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dialog_margin_10"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
         android:padding="@dimen/dialog_margin_10">
@@ -228,7 +270,7 @@
         android:layout_marginHorizontal="@dimen/game_board_margin_16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dialog_margin_10"
         android:orientation="horizontal"
         android:padding="@dimen/dialog_margin_10">
 
